--- a/frontend/src/app/components/notfound/notfound.component.html
+++ b/frontend/src/app/components/notfound/notfound.component.html
@@ -1,15 +1,5 @@
-<div class="jumbotron jumbotron-fluid">
-	<div class="text-center">
-		<h1 class="display-4">
-			<span class="text_pop">Oops!!</span> 
-			<br>
-			<mdb-icon fas icon="frown" class="text_shadow mt-3 mb-3"></mdb-icon>
-			<br>
-			<span class="text_pop">4</span>
-			<span class="text_pop">0</span>
-			<span class="text_pop">4</span>
-		</h1>
-		<p class="lead text_pop mt-5" style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">You took a wrong turn there my friend</p>
-		<a mdbBtn routerLink="/home" role="button" color="info" outline="true" mdbWavesEffect>Back To Home</a>
-	</div>
+<div class="error-wrapper">
+	<img class="img-fluid" src="assets/media/error.svg" alt="404 Error">
+	<p>Oops!! You took a wrong turn there my friend</p>
+	<a mdbBtn routerLink="/home" role="button" size="sm" color="info" outline="true" mdbWavesEffect>Back To Home</a>
 </div>
