--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -1,105 +1,98 @@
-<div class="jumbotron jumbotron-fluid" [formGroup]="profileForm">
-	<div class="profile-settings">
-		<div class="profile">
-			<div>
-				<img id="profile_link" alt="{{username}}" class="img-fluid rounded-circle d-block mx-auto" src="" loading="lazy">
-				
-				<h5>{{title}}</h5>
-				<div class="d-flex justify-content-center">
-					<button type="button" mdbBtn color="secondary" data-toggle="modal" data-target="#basicExample" (click)="changeModal.show()" mdbWavesEffect>Change</button>
+<div class="profile-wrapper" [formGroup]="profileForm">	
+	<div class="title-picture">
+		<div>
+			<img id="profile_link" alt="{{username}}" class="img-fluid rounded-circle d-block mx-auto" src="" loading="lazy">
+			<h5 class="mt-3 mb-3 text-white">{{title}}</h5>
+			<div class="d-flex justify-content-center mb-3">
+				<button type="button" mdbBtn color="secondary" size="sm" data-toggle="modal" data-target="#basicExample" (click)="changeModal.show()" mdbWavesEffect>Change</button>
+			</div>
+
+			<div mdbModal #changeModal="mdbModal" class="modal fade center" tabindex="-1" role="dialog" aria-labelledby="myChangeModalLabel" aria-hidden="true" style="margin-top: 150px;">
+				<div class="modal-dialog" role="document">
+					<div id="changeModal" class="modal-content">
+						<div class="modal-header text-center">
+							<h4 class="modal-title w-100 font-weight-bold">Profile Picture</h4>
+							<button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="changeModal.hide()">
+								<span aria-hidden="true">&times;</span>
+							</button>
+						</div>
+						<div class="modal-body mx-3">
+							<div class="md-form">
+								<input mdbInput type="text" class="form-control form-control-sm" formControlName="title">
+								<label><i class="fas fa-heading"></i>&nbsp;&nbsp;Title</label>
+							</div>
+			
+							<div class="md-form">
+								<input mdbInput type="url" class="form-control form-control-sm" formControlName="avatar">
+								<label><i class="fas fa-user-tie"></i>&nbsp;&nbsp;Avatar URL</label>
+							</div>
+						</div>
+						<div class="d-flex justify-content-center mb-4">
+							<button mdbBtn color="default" size="sm" class="waves-light" mdbWavesEffect (click)="saveLink()" (click)="changeModal.hide()">Change</button>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
-
-		<div class="settings">
-			<form>
-				<div class="md-form">
-					<input mdbInput type="text" class="form-control form-control-sm" formControlName="username"
-						required>
-					<label><i class="fas fa-user-secret"></i>&nbsp;&nbsp;Username</label>
-				</div>
-
-				<div class="md-form">
-					<input mdbInput type="text" class="form-control form-control-sm" formControlName="first_name"
-						required>
-					<label><i class="far fa-user"></i>&nbsp;&nbsp;First Name</label>
-				</div>
-
-				<div class="md-form">
-					<input mdbInput type="text" class="form-control form-control-sm" formControlName="last_name"
-						required>
-					<label><i class="fas fa-user"></i>&nbsp;&nbsp;Last Name</label>
-				</div>
-
-				<div class="md-form">
-					<input mdbInput type="email" class="form-control form-control-sm" formControlName="email" required>
-					<label><i class="fas fa-envelope-open"></i>&nbsp;&nbsp;Email</label>
-				</div>
-
-				<div class="md-form">
-					<input mdbInput type="text" class="form-control form-control-sm" formControlName="phone">
-					<label><i class="fas fa-phone-alt"></i>&nbsp;&nbsp;Phone Number</label>
-				</div>
-
-				<div class="md-form">
-					<textarea type="text" class="md-textarea form-control form-control-sm" rows="3"
-						formControlName="bio" mdbInput></textarea>
-					<label><i class="fas fa-info"></i>&nbsp;&nbsp;Bio</label>
-				</div>
-
-				<small id="update_success" class="alert alert-success d-block text-center hide" role="alert">Successfully Updated!</small>
-
-				<div class="d-flex justify-content-center mt-4 border">
-					<button type="button" mdbBtn color="info" mdbWavesEffect (click)="submit()">Submit</button>
-					<button type="button" mdbBtn color="warning" class="relative waves-light" (click)="deleteModal.show()" mdbWavesEffect>Delete profile</button >
-				</div>
-			</form>
-		</div>
 	</div>
 
-	<div mdbModal #changeModal="mdbModal" class="modal fade center" tabindex="-1" role="dialog" aria-labelledby="myChangeModalLabel" aria-hidden="true" style="margin-top: 150px;">
-		<div class="modal-dialog" role="document">
-			<div id="changeModal" class="modal-content">
-				<div class="modal-header text-center">
-					<h4 class="modal-title w-100 font-weight-bold">Profile Picture</h4>
-					<button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="changeModal.hide()">
-						<span aria-hidden="true">&times;</span>
-					</button>
-				</div>
-				<div class="modal-body mx-3">
-					<div class="md-form">
-						<input mdbInput type="text" class="form-control form-control-sm" formControlName="title">
-						<label><i class="fas fa-heading"></i>&nbsp;&nbsp;Title</label>
-					</div>
+	<div class="profile-details">
+		<form>
+			<div class="md-form">
+				<input mdbInput type="text" class="form-control form-control-sm" formControlName="username"
+					required>
+				<label><i class="fas fa-user-secret"></i>&nbsp;&nbsp;Username</label>
+			</div>
 	
-					<div class="md-form">
-						<input mdbInput type="url" class="form-control form-control-sm" formControlName="avatar">
-						<label><i class="fas fa-user-tie"></i>&nbsp;&nbsp;Avatar URL</label>
+			<div class="md-form">
+				<input mdbInput type="text" class="form-control form-control-sm" formControlName="first_name"
+					required>
+				<label><i class="far fa-user"></i>&nbsp;&nbsp;First Name</label>
+			</div>
+	
+			<div class="md-form">
+				<input mdbInput type="text" class="form-control form-control-sm" formControlName="last_name"
+					required>
+				<label><i class="fas fa-user"></i>&nbsp;&nbsp;Last Name</label>
+			</div>
+	
+			<div class="md-form">
+				<input mdbInput type="email" class="form-control form-control-sm" formControlName="email" required>
+				<label><i class="fas fa-envelope-open"></i>&nbsp;&nbsp;Email</label>
+			</div>
+	
+			<div class="md-form">
+				<input mdbInput type="text" class="form-control form-control-sm" formControlName="phone">
+				<label><i class="fas fa-phone-alt"></i>&nbsp;&nbsp;Phone Number</label>
+			</div>
+	
+			<div class="md-form">
+				<textarea type="text" class="md-textarea form-control form-control-sm" rows="3"
+					formControlName="bio" mdbInput></textarea>
+				<label><i class="fas fa-info"></i>&nbsp;&nbsp;Bio</label>
+			</div>
+	
+			<small id="update_success" class="alert alert-success d-block text-center hide" role="alert">Successfully Updated!</small>
+	
+			<div class="d-flex justify-content-center mb-3">
+				<button type="button" mdbBtn color="info" size="sm" mdbWavesEffect (click)="submit()">Submit</button>
+				<button type="button" mdbBtn color="warning" size="sm" class="relative waves-light" (click)="deleteModal.show()" mdbWavesEffect>Delete profile</button >
+			</div>
+		</form>
+		<div mdbModal #deleteModal="mdbModal" class="modal fade center" tabindex="-1" role="dialog" aria-labelledby="myDeleteModalLabel" aria-hidden="true" style="margin-top: 150px;">
+			<div class="modal-dialog" role="document">
+				<div id="deleteModal" class="modal-content">
+					<div class="modal-body text-center">
+						<h4 class="modal-title w-100 font-weight-bold">Are you sure you want to delete your profile?</h4>
+					</div>
+					<div class="justify-content-center mb-4">
+						<button type="button" mdbBtn color="default" size="sm" class="waves-light" aria-label="Close" (click)="deleteModal.hide()" mdbWavesEffect>Cancel</button>
+						<button type="button" mdbBtn color="danger" size="sm" class="relative waves-light" mdbWavesEffect (click)=delete()>Confirm</button>
 					</div>
 				</div>
-				<div class="modal-footer d-flex justify-content-center">
-					<button mdbBtn color="default" class="waves-light" mdbWavesEffect (click)="saveLink()" (click)="changeModal.hide()">Change</button>
-				</div>
 			</div>
-		</div>
 	</div>
-
-	<div mdbModal #deleteModal="mdbModal" class="modal fade center" tabindex="-1" role="dialog" aria-labelledby="myDeleteModalLabel" aria-hidden="true" style="margin-top: 150px;">
-		<div class="modal-dialog" role="document">
-			<div id="deleteModal" class="modal-content">
-				<div class="modal-header text-center">
-					<h4 class="modal-title w-100 font-weight-bold">Are you sure you want to delete your profile?</h4>
-					<button type="button" class="close pull-right" aria-label="Close" (click)="deleteModal.hide()">
-						<span aria-hidden="true">×</span>
-					</button>
-				</div>
-				<div class="modal-footer justify-content-center">
-					<button type="button" mdbBtn color="default" class="waves-light" aria-label="Close" (click)="deleteModal.hide()" mdbWavesEffect>Cancel</button>
-					<button type="button" mdbBtn color="danger" class="relative waves-light" mdbWavesEffect (click)=delete()>Confirm</button>
-				</div>
-			</div>
-		</div >
-	</div >
 </div>
+
 
 
