--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -298,6 +298,10 @@ body {
 			}
 		}
 
+		.forgot-password{
+			color: plum;
+		}
+
 		.authentication_forms{
 			.buttons{
 				margin-bottom: 2em;
