initialize password reset

--- a/frontend/src/app/components/password/password-reset/password-reset.component.html
+++ b/frontend/src/app/components/password/password-reset/password-reset.component.html
@@ -1,1 +1,15 @@
-<p>password-reset works!</p>
+<div class="password_reset_form">	
+	<form class="container pt-3 pb-3 pl-5 pr-5" [formGroup]="passwordResetForm">
+		<h6>Oops!! You seem to have lost your password.</h6>
+		<h6>Don't worry though, I have your back</h6>
+		<div class="md-form">
+			<input mdbInput type="text" class="form-control form-control-sm" formControlName="email" required>
+			<label><i class="fas fa-user-secret"></i>&nbsp;&nbsp;Email<strong>*</strong></label>
+			<small *ngIf="errors.email" class="error_alert">{{errors.email}}</small>
+		</div>
+
+		<div class="d-flex justify-content-center mt-4">
+			<button type="button" mdbBtn size="sm" color="info" mdbWavesEffect (click)="resetPassword()">Confirm</button>
+		</div>
+	</form>
+</div>
