--- a/frontend/src/app/components/password/password-reset/password-reset.component.html
+++ b/frontend/src/app/components/password/password-reset/password-reset.component.html
@@ -9,6 +9,7 @@
 		</div>
 
 		<div class="d-flex justify-content-center mt-4">
+			<a type="button" mdbBtn size="sm" color="info" mdbWavesEffect routerLink="/">Go back</a>
 			<button type="button" mdbBtn size="sm" color="info" mdbWavesEffect (click)="resetPassword()">Confirm</button>
 		</div>
 	</form>
