Password reset finalized

--- a/frontend/src/app/components/password/password-confirm/password-confirm.component.html
+++ b/frontend/src/app/components/password/password-confirm/password-confirm.component.html
@@ -1,1 +1,20 @@
-<p>password-confirm works!</p>
+<div class="password_reset_form">	
+	<form class="container pt-3 pb-3 pl-5 pr-5" [formGroup]="passwordConfirmForm">
+		<h6>Please provide your new password</h6>
+		<div class="md-form">
+			<input mdbInput type="password" class="form-control form-control-sm" formControlName="password" required>
+			<label><i class="fas fa-key"></i>&nbsp;&nbsp;New Password<strong>*</strong></label>
+			<small *ngIf="errors.password" class="error_alert">{{errors.password}}</small>
+			<br>
+			<small *ngIf="errors.token || errors.detail" class="error_alert">Please make sure you clicked on the link we sent to you via the email</small>
+		</div>
+
+		<small #alert id="register_alert" class="text-success" role="alert" *ngIf="success">
+			Password successfully reset!
+		</small>
+
+		<div class="d-flex justify-content-center mt-4">
+			<button type="button" mdbBtn size="sm" color="info" mdbWavesEffect (click)="confirmPassword()">Confirm</button>
+		</div>
+	</form>
+</div>
