--- a/frontend/src/app/components/password/password-reset/password-reset.component.html
+++ b/frontend/src/app/components/password/password-reset/password-reset.component.html
@@ -8,6 +8,10 @@
 			<small *ngIf="errors.email" class="error_alert">{{errors.email}}</small>
 		</div>
 
+		<small #alert id="register_alert" class="text-success" role="alert" *ngIf="success">
+			Please check your email for a reset link
+		</small>
+
 		<div class="d-flex justify-content-center mt-4">
 			<a type="button" mdbBtn size="sm" color="info" mdbWavesEffect routerLink="/">Go back</a>
 			<button type="button" mdbBtn size="sm" color="info" mdbWavesEffect (click)="resetPassword()">Confirm</button>
